manifests/k8s/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: periodic-table-app
  namespace: periodic-table
  labels:
    app: periodic-table-app
    app.kubernetes.io/instance: periodic-table
spec:
  replicas: 1
  selector:
    matchLabels:
      app: periodic-table-app
  template:
    metadata:
      labels:
        app: periodic-table-app
    spec:
      containers:
      - name: periodic-table
        image: docker.io/juouyang/periodic-table:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 64Mi
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
